Replace collect(toList()) with toList()